# SmartBin

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  AI1.py  AI3.py  AI4.py  AI5.py  AI_dataset.py  CLAUDE.md  DESIGN.md  Dataset_-arduino.py  Dockerfile  Dockerfile.edge  HexaBin biodivesrity.docx  INSTRUCTIONS.md  README.md  ai.py  benchmark_count.py  docker-compose.edge-full.yml  docker-compose.edge.yml  docker-compose.server-llm.yml  docker-compose.yml  documentation.md  main.py  mainauto.py  mainoak.py  mainraspberry.py  patch_web.py  pr_description.md  pr_description.txt  pyproject.toml  requirements-edge.txt  requirements.txt  review.md  reviewgemini.md  run_tasks.sh  tasks.txt  test_cache.py  (+3 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
OAK-1W/: CLAUDE.md  main.py  mainauto.py  requirements.txt
OAK-1W/smartwaste/: cameraOak.py  cameraraspberry.py  classifier.py  config.py  database.py  dataset.py
OLD/: AI2.py  AI3 copy.py  README.md  arduino.cpp  test.cpp  waste_sorter3  waste_sorter_yolo.py
docs/adr/: 0001-db-authoritative-auth.md  0002-camera-config-desired-vs-applied.md
grafana/dashboards/: hexabin.json  smartwaste.json
hexabin/: __main__.py  actuator.py  analytics.py  app.py  camera_config.py  classifier.py  config.py  control.py  database.py  dataset.py  edge_client.py  edge_server.py  llm.py  log_setup.py  oak_native.py  presence.py  prompt.py  schemas.py  settings.py  strategies.py  users.py  utils.py  warnings.py  web.py
hexabin/web_static/: brand.css  cc_nav.js  dashboard.css  dashboard.js  dashboard_alerts.js  dashboard_analytics.js  dashboard_cameras.js  dashboard_classifications.js  dashboard_map.js  dashboard_settings.js  site.css  site.js  theme.js
hexabin/web_static/models/: hexabin.glb
hexabin/web_templates/: _cc_base.html  dashboard.html  dashboard_alerts.html  dashboard_analytics.html  dashboard_classifications.html  dashboard_map.html  dashboard_settings.html  index.html  login.html  site.html
scripts/: build_pitch_hti.py  migrate_json_to_pg.py
smartwaste/: __main__.py  actuator.py  analytics.py  app.py  camera.py  cameraraspberry.py  classifier.py  config.py  control.py  database.py  dataset.py  edge_client.py  edge_server.py  llm.py  log_setup.py  oak_native.py  presence.py  prompt.py  schemas.py  settings.py  state.py  strategies.py  ui.py  utils.py  warnings.py  web.py
smartwaste/web_static/: brand.css  cc_nav.js  dashboard.css  dashboard.js  dashboard_alerts.js  dashboard_analytics.js  dashboard_classifications.js  dashboard_map.js  site.css  site.js  style.css
smartwaste/web_templates/: _cc_base.html  dashboard.html  dashboard_alerts.html  dashboard_analytics.html  dashboard_classifications.html  dashboard_map.html  index.html  login.html  site.html
tests/: conftest.py  test_actuator.py  test_analytics.py  test_camera.py  test_cameraOak.py  test_camera_config.py  test_cameraraspberry.py  test_classifier.py  test_config.py  test_control.py  test_database.py  test_dataset.py  test_edge_client.py  test_llm.py  test_log_setup.py  test_presence.py  test_prompt.py  test_state.py  test_strategies.py  test_ui.py  test_users.py  test_utils.py  test_warnings.py  test_web.py
(+2 files in other folders)
