[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hexabin"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "opencv-python",
    "depthai",
    "google-genai",
    "openpyxl",
    "pandas",
    "blobconverter",
    "tenacity",
    "pydantic-settings>=2.0",
    "psycopg2-binary",
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
]

[project.scripts]
hexabin      = "main:main"
hexabin-auto = "mainauto:main"
hexabin-oak  = "mainoak:main"
hexabin-run  = "hexabin.control:main"

# ── Ruff (linting + formatting) ───────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length    = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # pycodestyle errors/warnings + pyflakes + isort
ignore = [
    "E501",   # line too long — formatter handles this
]

# ── Mypy (type checking) ──────────────────────────────────────────────────────
[tool.mypy]
python_version        = "3.10"
warn_return_any       = true
warn_unused_configs   = true
ignore_missing_imports = true   # cv2, depthai, google-genai have no bundled stubs

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts   = "--tb=short -q"

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["hexabin"]
omit   = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
